force-app/main/default/objects/Fiscal_Year__c/Fiscal_Year__c.object-meta.xml
<CustomObject>
    <description>Contains current active fiscal year startdate, enddate and number of work days</description>
    <label>Fiscal Year</label>
    <nameField>
        <label>Fiscal Year Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fiscal Years</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>