force-app/main/default/objects/Fiscal_Year__c/fields/Aug_Work_Days__c.field-meta.xml
<CustomField>
    <fullName>Aug_Work_Days__c</fullName>
    <formula>CASE(MOD( DATE(VALUE(Name)-1,8,1) - DATE(1985,6,24),7), 
  0 , CASE( MOD( DATE(VALUE(Name)-1,8,31) - DATE(VALUE(Name)-1,8,1) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( DATE(VALUE(Name)-1,8,31) - DATE(VALUE(Name)-1,8,1) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( DATE(VALUE(Name)-1,8,31) - DATE(VALUE(Name)-1,8,1) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( DATE(VALUE(Name)-1,8,31) - DATE(VALUE(Name)-1,8,1) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( DATE(VALUE(Name)-1,8,31) - DATE(VALUE(Name)-1,8,1) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( DATE(VALUE(Name)-1,8,31) - DATE(VALUE(Name)-1,8,1) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( DATE(VALUE(Name)-1,8,31) - DATE(VALUE(Name)-1,8,1) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( DATE(VALUE(Name)-1,8,31) - DATE(VALUE(Name)-1,8,1) )/7)*5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aug Work Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>