force-app/main/default/objects/Fiscal_Year__c/fields/Feb_Work_Days_Value__c.field-meta.xml
<CustomField>
    <fullName>Feb_Work_Days_Value__c</fullName>
    <label>Feb Work Days Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>